# pandaseq

./: .gitignore  .indent.pro  .travis.yml  Makefile.am  README  README.md  algo.c  algo.h  algo_ea_util.c  algo_example.c  algo_flash.c  algo_pear.c  algo_rdp_mle.c  algo_simple_bayes.c  algo_stitch.c  algo_uparse.c  args.c  args_array.c  args_assembler.c  args_fastq.c  args_hang.c  assembler.c  assembler.h  assembler_support.c  async.c  autogen.sh  buffer.c  buffer.h  buffer.list  build-macos-pkg.in  bzstream.c  check_parser.c  configure.ac  curl_reader.c  deps-url.in  diff.c  fastq.c  fileio.c  hang.c  idset.c  (+75 more)
debian/: changelog  control  copyright  libpandaseq-url0.install  libpandaseq0.install  libpandaseq3.install  libpandaseq5.install  pandaseq-dev.install  pandaseq.install  rules
docs/: index.html
docs/pandaseq-vapi/: index.html
docs/pandaseq-vapi/pandaseq-2/: Panda.Algorithm.Pear.Pear.html  Panda.Algorithm.Pear.html  Panda.Algorithm.RdpMle.RdpMle.html  Panda.Algorithm.RdpMle.html  Panda.Algorithm.SimpleBayes.SimpleBayes.html  Panda.Algorithm.SimpleBayes.error_estimation.html  Panda.Algorithm.SimpleBayes.html  Panda.Algorithm.compare.html  Panda.Algorithm.html  Panda.Algorithm.is_a.html  Panda.Algorithm.ref.html  Panda.Algorithm.unref.html  Panda.Assembler.Assembler.fastq.html  Panda.Assembler.Assembler.html  Panda.Assembler.Assembler.kmer.html  Panda.Assembler.add_module.html  Panda.Assembler.add_modules.html  Panda.Assembler.algorithm.html  Panda.Assembler.assemble.html  Panda.Assembler.bad_read_count.html  Panda.Assembler.copy_configuration.html  Panda.Assembler.count.html  Panda.Assembler.degenerate_count.html  Panda.Assembler.disallow_degenerates.html  Panda.Assembler.error_estimation.html  Panda.Assembler.failed_alignment_count.html  Panda.Assembler.for_each_module.html  Panda.Assembler.forward_primer.html  Panda.Assembler.forward_trim.html  Panda.Assembler.html  Panda.Assembler.logger.html  Panda.Assembler.low_quality_count.html  Panda.Assembler.minimum_overlap.html  Panda.Assembler.module_stats.html  Panda.Assembler.name.html  Panda.Assembler.next.html  Panda.Assembler.no_forward_primer_count.html  Panda.Assembler.no_reverse_primer_count.html  Panda.Assembler.num_kmer.html  Panda.Assembler.ok_count.html  (+285 more)
docs/pandaseq-vapi/pandaseq-2-url/: Panda.bz_decompress.html  Panda.cURL.html  Panda.cURL.ref.html  Panda.cURL.unref.html  Panda.html  Panda.open_url.html  index.htm
docs/pandaseq-vapi/pandaseq-sam-1/: Panda.SAM.Args.Args.html  Panda.SAM.Args.html  Panda.SAM.Args.opener.html  Panda.SAM.Args.setup.html  Panda.SAM.Args.tweak.html  Panda.SAM.create_reader.html  Panda.SAM.html  Panda.SAM.open.html  Panda.SAM.open_mux.html  Panda.SAM.parse_id.html  Panda.SAM.version.html  Panda.html  index.htm
m4/: acx_pthread.m4  ag_check_uname_syscall.m4  ax_check_cflags.m4  legacy_pkg.m4
plugins/: after.c  before.c  completely_miss_the_point.c  filter.c  sample.c  validtag.c
testing/: Makefile  README.md  access_new_library.vala  dynamic_loader.c  library_bridge.h  library_bridge.vapi  pandaseq-diff.vala  reg-test.vala  setup.vala  test_wrapper.c  test_wrapper.h  test_wrapper.vapi
